extends Control


func _on_operator_start_button_pressed():
	
	
	pass # Replace with function body.


func _on_roamer_start_button_pressed():
	
	
	pass # Replace with function body.


func _on_operator_tutorial_button_pressed():
	
	
	pass # Replace with function body.


func _on_roamer_tutorial_button_pressed():
	
	
	pass # Replace with function body.


func _on_options_button_pressed():
	
	
	pass # Replace with function body.


func _on_credits_button_pressed():
	
	
	pass # Replace with function body.


func _on_exit_button_pressed(): #Shockingly, quits the game
	
	
	pass # Replace with function body.
